# BerkeleyTracker

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: detect_sdr.sh  install_ais_catcher.sh  install_dump1090.sh  setup_influxdb.sh
src/tracker/: __init__.py  config.py  main.py
src/tracker/api/: server.py
src/tracker/enrichment/: __init__.py  engine.py  flightaware.py  marine_traffic.py  mmsi_lookup.py  opensky.py
src/tracker/integrations/: __init__.py  dashboard.py  influx_writer.py  mqtt_publisher.py
src/tracker/registry/: __init__.py  aircraft.py  db.py  photos.py  routes.py  vessels.py
src/tracker/sdr/: __init__.py  adsb_ingest.py  ais_ingest.py  manager.py
src/tracker/telemetry/: health.py
tests/: __init__.py  conftest.py  test_adsb_parse.py  test_ais_parse.py  test_registry.py  test_route_learning.py
